<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="title_activity_principal">Trabalho Final</string>
    <string name="desc_tela_login">Logo tela de login</string>
    <string name="label_e_mail">E-mail</string>
    <string name="label_senha">Senha</string>
    <string name="label_entrar">Entrar</string>
    <string name="label_create_account">Criar nova conta</string>
    <string name="label_novo_usuario">Criar Novo Usuário</string>
    <string name="label_nome">Nome</string>
    <string name="label_criar">Criar</string>
    <string name="url_api">https://trabalho-final-mobile.herokuapp.com</string>
    <string name="error_required_field">Campo obrigatório</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="action_settings">Settings</string>
    <string name="label_cadastrar_produto">Cadastrar Produto</string>
    <string name="label_cod_produto">Código do produto</string>
    <string name="label_quantidade_em_estoque">Quantidade em estoque</string>
    <string name="label_valor">Valor</string>
    <string name="label_cadastrar">Cadastrar</string>
    <string name="integrante1">Gabriel Gonçaves da Silva</string>
    <string name="rm_integrante1">333497</string>
    <string name="integrante2">Tiago Naoto Kamegasawa</string>
    <string name="rm2">333483</string>
    <string name="version">Versão</string>
    <string name="produtos">Produtos</string>
    <string name="sobre">Sobre</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu">Menu</string>
    <string name="opcoes">Opções</string>
</resources>
