<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.about.AboutActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="129dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107"
        app:srcCompat="@drawable/shop_cart" />

    <TextView
        android:id="@+id/integrante1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/integrante1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/rm1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rm_integrante1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/integrante1"
        app:layout_constraintVertical_bias="0.08" />

    <TextView
        android:id="@+id/integrante2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/integrante2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rm1"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/rm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rm_integrante2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/integrante2"
        app:layout_constraintVertical_bias="0.119" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rm2"
        app:layout_constraintVertical_bias="0.395"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textVersion"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:text="@string/version" />

        <TextView
            android:id="@+id/versionNumber"
            android:layout_width="43dp"
            android:layout_height="wrap_content" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>